adds some styles

--- a/src/components/FriendList/FriendList.module.css
+++ b/src/components/FriendList/FriendList.module.css
@@ -8,19 +8,25 @@
 .friendList__item {
   display: flex;
   align-items: center;
-  padding: 20px;
+  padding: 10px;
   font-size: 18px;
   font-weight: 600;
   box-shadow: 5px 8px 15px rgb(55 90 10 / 10%), 0 10px 10px rgb(55 90 10 / 25%);
+  transition: transform 250ms linear;
 }
+
+.friendList__item:hover {
+  transform: scale(1.05);
+}
+
 .friendList__item:not(:last-child) {
   margin-bottom: 10px;
 }
 
 .status {
   display: inline-block;
-  width: 12px;
-  height: 12px;
+  width: 15px;
+  height: 15px;
   border-radius: 50%;
   margin-right: 10px;
 }
